fix: Wrap frame contents in cleanslate css

--- a/src/components/root.module.scss
+++ b/src/components/root.module.scss
@@ -1,8 +1,12 @@
+@import "~cleanslate/cleanslate";
+
 @import "./shared";
 
 $font-stack: "Segoe UI", sans-serif;
 
 .wrapper {
+  @extend .cleanslate;
+
   box-sizing: border-box !important;
   font-family: $font-stack !important;
   font-size: 0.8 * $base-size !important;
